--- a/client/src/components/NavDetail/NavDetail.module.css
+++ b/client/src/components/NavDetail/NavDetail.module.css
@@ -1,9 +1,20 @@
 .NavDetailStyle {
+    background-color: rgb(68, 88, 129) ;
+    opacity: 0.95;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    padding: 5px;
-    border-radius: 10px;
-    border: 1px solid black;
-    
+    justify-content: start;
+    border: 0px;
+    padding: 15px; 
+}
+
+.home {
+    background-color: #f7b633;
+    border: 0;
+    border-radius: 3.5px;
+    margin-left: 10%
+}
+
+.home:hover {
+    background-color: #faad13;
 }
