--- a/client/src/components/Cards/Cards.module.css
+++ b/client/src/components/Cards/Cards.module.css
@@ -22,11 +22,29 @@
 .results {
     background-color: rgba(63, 63, 63, 0.5);
     margin-top: 0ch;
-    margin-bottom: 0ch;
-    padding: 10px;
+    justify-content: space-between;
+    padding: 5px;
     width: 100%;
+    height: 20px;
     color: aliceblue;
+    display: flex;
 }
+
+.resultsTitle {
+    display: flex;
+    margin-top: auto;
+}
+
+.resultsButton {
+    background-color: #f7b633;
+    border: 0;
+    border-radius: 3.5px;
+}
+
+.resultsButton:hover {
+    background-color: #faad13;
+}
+
 .pagsControl {
     position: fixed;
     bottom: 0;
